# FileTransfer

./: CHANGELOG.md  LICENSE.txt  README.md  requirements.txt  setup.cfg
docs/: .buildinfo  api.html  config.html  examples.html  genindex.html  index.html  license.html  mails.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js  usage.html
docs/_sources/: api.rst.txt  config.rst.txt  examples.rst.txt  index.rst.txt  license.rst.txt  mails.rst.txt  overview.rst.txt  usage.rst.txt
docs/_static/: custom.css  documentation_options.js
src/filetransfer/: __init__.py  __main__.py  base.py  config.py  const.py  exceptions.py  ftp.py  job.py  local.py  loghandler.py  mail.py  sftp.py  utils.py
src/filetransfer/data/: __init__.py  app_config_spec.ini  default.mail  host_config_spec.ini  job_config_spec.ini
