[metadata]
name = FileTransfer
version = 0.7.0
url = https://andreas19.github.io/FileTransfer/
project_urls = Source code=https://github.com/andreas19/FileTransfer/
author = Andreas19
author_email = andreas19@posteo.eu
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Internet :: File Transfer Protocol (FTP)
    Topic :: Software Development :: Libraries
license = BSD-3-Clause
license_file = LICENSE.txt
description = Application and library for file transfer.
long_description = file:README.md,CHANGELOG.md
long_description_content_type = text/markdown

[options]
install_requires =
    ftputil>=3.4
    paramiko>=2.4.2
    docopt>=0.6.2
    salmagundi>=0.7.0
python_requires = >=3.6
package_dir = =src
packages = filetransfer, filetransfer.data

[options.package_data]
* = *.ini

[options.entry_points]
console_scripts = filetransfer=filetransfer.__main__:main
