[metadata]
name = FileTransfer
version = 0.11.0
url = https://andreas19.github.io/FileTransfer/
project_urls = Source code=https://github.com/andreas19/FileTransfer/
author = Andreas Suhre
author_email = andreas19@posteo.eu
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: File Transfer Protocol (FTP)
    Topic :: Software Development :: Libraries
license = BSD-3-Clause
license_file = LICENSE.txt
description = Application and library for file transfer.
long_description = file:README.md,CHANGELOG.md
long_description_content_type = text/markdown
keywords: files, filetransfer, ftp, ftps, sftp, transfer

[options]
install_requires =
    easimpconf>=0.2.2
    ftputil>=4
    paramiko~=2.7
    salmagundi>=0.15.0
    importlib_resources>=1.0.2;python_version<"3.7"
    dataclasses>=0.7;python_version<"3.7"
python_requires = >=3.6
package_dir = =src
packages = filetransfer, filetransfer.data

[options.package_data]
* = *.ini, default.mail

[options.entry_points]
console_scripts = filetransfer=filetransfer.__main__:main
